<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <RadioGroup
        android:id="@+id/rg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RadioButton
            android:id="@+id/rbPack02"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rb_02" />

        <RadioButton
            android:id="@+id/rbPack04"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rb_04" />

        <RadioButton
            android:id="@+id/rbPack06"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rb_06" />

        <RadioButton
            android:id="@+id/rbPack12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rb_12" />
    </RadioGroup>

    <TextView
        android:id="@+id/txtLabelDe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/txt_label_de"
        app:layout_constraintEnd_toStartOf="@+id/txtValueDe"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rg" />

    <TextView
        android:id="@+id/txtValueDe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_valor_inicial"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/txtLabelDe"
        app:layout_constraintTop_toTopOf="@+id/txtLabelDe" />

    <TextView
        android:id="@+id/txtLabelPor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/txt_label_por"
        app:layout_constraintEnd_toStartOf="@+id/txtValuePor"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtLabelDe" />

    <TextView
        android:id="@+id/txtValuePor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_valor_inicial"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/txtLabelPor"
        app:layout_constraintTop_toTopOf="@+id/txtLabelPor" />

    <TextView
        android:id="@+id/txtLabelUnitario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/txt_label_unitario"
        app:layout_constraintEnd_toStartOf="@+id/edtValueUnitario"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtLabelPor" />

    <EditText
        android:id="@+id/edtValueUnitario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="numberDecimal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/txtLabelUnitario" />

</androidx.constraintlayout.widget.ConstraintLayout>